# mcontrol

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ready-for-agent.yml
docs/: CONTEXT.md  architecture.md  decisions.md  fix-aserver-vhost-stale-upstream.md
docs/agents/: domain.md  issue-tracker.md
docs/patterns/: tailnet-https-via-cloudflare.md
docs/plans/: 2026-04-27-mcontrol-v1-slice1-scaffold.md  2026-04-27-mcontrol-v1-slice2-supabase-migration.md  2026-04-27-mcontrol-v1-slice3-server-discovery.md  2026-04-29-mcontrol-v1-slice4-lifecycle-logs-rcon.md  2026-05-03-mcontrol-v1-slice5-file-browser.md  (+12 more)
scripts/: sync_design.sh
src/mcontrol/: db.py  (+25 more)
tests/: conftest.py  test_bindings.py  test_compose_runner.py  test_console.py  test_db.py  test_delete_server.py  test_discovery.py  test_docker_client.py  test_env_writer.py  test_files.py  test_files_bulk.py  test_files_detail.py  test_files_download.py  test_files_mutate.py  test_files_safety.py  test_files_search.py  test_files_tree.py  test_files_upload.py  test_files_view.py  test_files_write.py  test_health.py  test_healthz.py  test_home.py  test_lifecycle.py  test_lifecycle_state.py  test_lifespan.py  test_logs.py  test_membership.py  test_migrate_routes.py  test_migration.py  test_mojang.py  test_new_server.py  test_no_hardcoded_styles.py  test_passwords.py  test_players.py  test_rcon.py  test_regenerate.py  test_rescan.py  test_resources.py  test_scaffolding.py  (+13 more)
(+127 files in other folders)
